# VELOVITE

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
back/: .dockerignore  .env  Cargo.toml  Dockerfile  flake.nix  school_holidays.json  weather.json
back/merged_data_mock/: 1.json  10001.json  10002.json  10004.json  10005.json  10006.json  10007.json  10008.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10015.json  10016.json  10018.json  10019.json  1002.json  10021.json  10023.json  10024.json  10025.json  10027.json  10028.json  1003.json  10030.json  10031.json  10032.json  10034.json  10035.json  10036.json  10038.json  10039.json  10041.json  10043.json  10044.json  10045.json  10046.json  10047.json  (+399 more)
back/migrations/2025-01-22-093804_create_tables/: down.sql  up.sql
back/migrations/2025-01-23-085607_create_tables/: down.sql  up.sql
back/src/: api.rs  args.rs  downloader.rs  learning.rs  main.rs  mock.rs  models.rs  populate.rs  schema.rs  utils.rs
front/: Dockerfile  flake.nix  index.html  indexe.svelte  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
front/src/: app.d.ts  app.html  index.html
front/src/lib/: CustomMarkers.ts  LeafletMap.svelte  MapToolbar.svelte  MarkerPopup.svelte  Markers.svelte  interfaces.ts  rust_api.ts  store.ts
front/src/routes/: +page.svelte
