[package]
name = "velovite-back"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7.9", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"
log = "0.4.25"
rayon = "1.10.0"
indoc = "2.0.5"
csv = "1.3.1"
